--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "8.0.4",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-burger-menu": "^2.6.4",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
